generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

model User {
  id             String        @id @default(cuid())
  name           String?
  email          String?       @unique
  emailVerified  DateTime?
  image          String?
  hashedPassword String?
  cart           Json          @default("{}")
  role           Role          @default(CUSTOMER)
  isActive       Boolean       @default(true)
  phone          String?
  gender         String?
  dateOfBirth    DateTime?
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @default(now()) @updatedAt
  accounts       Account[]
  Address        Address[]
  chatSessions   ChatSession[]
  buyerOrders    Order[]       @relation("BuyerRelation")
  ratings        Rating[]
  store          Store?
  userVouchers   UserVoucher[]

  @@map("User")
}

model Product {
  id               String            @id @default(cuid())
  name             String
  description      String
  price            Float
  images           String[]
  quantity         Int               @default(0)
  isActive         Boolean           @default(true)
  storeId          String
  categoryId       String?
  brandId          String?
  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt
  orderItems       OrderItem[]
  brandRef         Brand?            @relation(fields: [brandId], references: [id])
  categoryRef      Category?         @relation(fields: [categoryId], references: [id])
  store            Store             @relation(fields: [storeId], references: [id], onDelete: Cascade)
  rating           Rating[]
  voucherCampaigns VoucherCampaign[] @relation("ProductToVoucherCampaign")
  hasVariations    Boolean           @default(false)
  variationGroups  Json?             
  variants         ProductVariant[]
}

model ProductVariant {
  id        String   @id @default(cuid())
  productId String
  product   Product  @relation(fields: [productId], references: [id], onDelete: Cascade)

  attributes Json     
  price      Float
  quantity   Int      @default(0)
  sku        String?
  images     String[] 

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  orderItems OrderItem[]

  @@unique([productId, id])
}

model Order {
  id                  String        @id @default(cuid())
  paymentIntentId     String?       @unique
  total               Float
  status              OrderStatus   @default(ORDER_PLACED)
  userId              String
  storeId             String
  addressId           String
  isPaid              Boolean       @default(false)
  paymentMethod       PaymentMethod
  totalDiscountAmount Float         @default(0)
  createdAt           DateTime      @default(now())
  updatedAt           DateTime      @updatedAt
  completedAt         DateTime?
  deliveredAt         DateTime?
  address             Address       @relation(fields: [addressId], references: [id])
  store               Store         @relation(fields: [storeId], references: [id])
  user                User          @relation("BuyerRelation", fields: [userId], references: [id])
  orderItems          OrderItem[]
  userVouchers        UserVoucher[]
}

model OrderItem {
  orderId   String
  productId String
  quantity  Int
  price     Float
  order     Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product   Product @relation(fields: [productId], references: [id])
  variantId String?
  variant   ProductVariant? @relation(fields: [variantId], references: [id])

  @@id([orderId, productId])
}

model Rating {
  id        String   @id @default(cuid())
  rating    Int
  review    String
  userId    String
  productId String
  orderId   String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  product   Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, productId, orderId])
}

model Address {
  id        String   @id @default(cuid())
  userId    String
  name      String
  street    String
  city      String
  state     String
  country   String
  phone     String
  createdAt DateTime @default(now())
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  Order     Order[]
}

model Category {
  id               String            @id @default(cuid())
  name             String            @unique
  slug             String            @unique
  isActive         Boolean           @default(true)
  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt
  parentId         String?
  parent           Category?         @relation("CategoryHierarchy", fields: [parentId], references: [id])
  children         Category[]        @relation("CategoryHierarchy")
  products         Product[]
  voucherCampaigns VoucherCampaign[] @relation("CategoryToVoucherCampaign")
}

model Brand {
  id          String    @id @default(cuid())
  name        String    @unique
  slug        String    @unique
  logo        String
  description String?
  isActive    Boolean   @default(true)
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  products    Product[]
}

model VoucherCampaign {
  id                   String        @id @default(cuid())
  name                 String
  description          String?
  voucher_code         String?       @unique
  voucher_type         VoucherType
  discount_type        DiscountType
  discount_value       Float
  max_discount_amount  Float?
  min_order_value      Float         @default(0)
  start_date           DateTime
  end_date             DateTime
  total_usage_limit    Int
  user_usage_limit     Int           @default(1)
  status               String        @default("ACTIVE")
  created_by_shop_id   String?
  createdAt            DateTime      @default(now())
  updatedAt            DateTime      @updatedAt
  userVouchers         UserVoucher[]
  store                Store?        @relation(fields: [created_by_shop_id], references: [id])
  applicableCategories Category[]    @relation("CategoryToVoucherCampaign")
  applicableProducts   Product[]     @relation("ProductToVoucherCampaign")
}

model UserVoucher {
  id                  String            @id @default(cuid())
  status              UserVoucherStatus @default(AVAILABLE)
  collected_date      DateTime          @default(now())
  used_date           DateTime?
  user_id             String
  voucher_campaign_id String
  used_in_order_id    String?
  order               Order?            @relation(fields: [used_in_order_id], references: [id])
  user                User              @relation(fields: [user_id], references: [id], onDelete: Cascade)
  voucherCampaign     VoucherCampaign   @relation(fields: [voucher_campaign_id], references: [id], onDelete: Cascade)

  @@unique([user_id, voucher_campaign_id, used_in_order_id])
}

model Store {
  id               String            @id @default(cuid())
  userId           String            @unique
  name             String
  description      String
  username         String            @unique
  address          String
  status           String            @default("pending")
  isActive         Boolean           @default(false)
  logo             String
  email            String
  contact          String
  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt
  Order            Order[]
  Product          Product[]
  user             User              @relation(fields: [userId], references: [id])
  voucherCampaigns VoucherCampaign[]
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?
  user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model ChatSession {
  id        String        @id @default(cuid())
  title     String
  createdAt DateTime      @default(now())
  updatedAt DateTime      @updatedAt
  userId    String?
  messages  ChatMessage[]
  user      User?         @relation(fields: [userId], references: [id])
}

model ChatMessage {
  id            String      @id @default(cuid())
  content       String
  role          String
  createdAt     DateTime    @default(now())
  chatSessionId String
  chatSession   ChatSession @relation(fields: [chatSessionId], references: [id], onDelete: Cascade)
}

model ChatLogs {
  id             String   @id @default(cuid())
  sessionId      String
  userQuery      String
  detectedIntent String?
  toolUsed       String?
  toolInput      Json?
  toolOutput     Json?
  finalResponse  String
  responseTime   Int?
  errorMessage   String?
  userId         String?
  createdAt      DateTime @default(now())

  @@index([sessionId])
  @@index([createdAt])
}

enum Role {
  CUSTOMER
  STORE_OWNER
  ADMIN
}

enum OrderStatus {
  ORDER_PLACED
  PROCESSING
  SHIPPED
  DELIVERED
  COMPLETED
}

enum PaymentMethod {
  COD
  STRIPE
}

enum VoucherType {
  SHOP
  PLATFORM
  SHIPPING
}

enum DiscountType {
  FIXED_AMOUNT
  PERCENTAGE
}

enum UserVoucherStatus {
  AVAILABLE
  USED
  EXPIRED
}
