//// ----------------------------------------------------
//// SHOPME DATABASE SCHEMA (UPDATED)
//// Generated from Prisma Schema - 2025-12-09
//// ----------------------------------------------------

Project ShopMe {
  database_type: 'PostgreSQL'
  Note: 'Schema for a multi-vendor e-commerce platform'
}

// --- Enums ---

Enum Role {
  CUSTOMER
  STORE_OWNER
  ADMIN
}

Enum OrderStatus {
  ORDER_PLACED
  PROCESSING
  SHIPPED
  DELIVERED
  COMPLETED
}

Enum PaymentMethod {
  COD
  STRIPE
}

Enum VoucherType {
  SHOP
  PLATFORM
  SHIPPING
}

Enum DiscountType {
  FIXED_AMOUNT
  PERCENTAGE
}

Enum UserVoucherStatus {
  AVAILABLE
  USED
  EXPIRED
}

// --- Tables ---

Table User {
  id string [pk]
  name string
  email string [unique]
  emailVerified datetime
  image string
  hashedPassword string
  cart json [default: `{}`]
  role Role [default: 'CUSTOMER', not null]
  isActive bool [default: true, not null]
  phone string
  gender string
  dateOfBirth datetime
  createdAt datetime [default: `now()`, not null]
  updatedAt datetime [default: `now()`, not null, note: 'updated automatically']
}

Table Store {
  id string [pk]
  userId string [unique, not null, ref: - User.id]
  name string [not null]
  description string [not null]
  username string [unique, not null]
  address string [not null]
  status string [default: 'pending', not null]
  isActive bool [default: false, not null]
  logo string [not null]
  email string [not null]
  contact string [not null]
  createdAt datetime [default: `now()`, not null]
  updatedAt datetime [not null, note: 'updated automatically']
}

Table Product {
  id string [pk]
  name string [not null]
  description string [not null]
  price float [not null]
  images string[] [not null]
  quantity int [default: 0, not null]
  isActive bool [default: true, not null]
  storeId string [not null, ref: > Store.id]
  categoryId string [ref: > Category.id]
  brandId string [ref: > Brand.id]
  createdAt datetime [default: `now()`, not null]
  updatedAt datetime [not null, note: 'updated automatically']
}

Table Category {
  id string [pk]
  name string [unique, not null]
  slug string [unique, not null]
  isActive bool [default: true, not null]
  createdAt datetime [default: `now()`, not null]
  updatedAt datetime [not null, note: 'updated automatically']
}

Table Brand {
  id string [pk]
  name string [unique, not null]
  slug string [unique, not null]
  logo string [not null]
  description string
  isActive bool [default: true, not null]
  createdAt datetime [default: `now()`, not null]
  updatedAt datetime [not null, note: 'updated automatically']
}

Table "Order" {
  id string [pk]
  paymentIntentId string [unique]
  total float [not null]
  totalDiscountAmount float [default: 0, not null]
  status OrderStatus [default: 'ORDER_PLACED', not null]
  userId string [not null, ref: > User.id]
  storeId string [not null, ref: > Store.id]
  addressId string [not null, ref: > Address.id]
  isPaid bool [default: false, not null]
  paymentMethod PaymentMethod [not null]
  createdAt datetime [default: `now()`, not null]
  updatedAt datetime [not null, note: 'updated automatically']
  deliveredAt datetime
  completedAt datetime
}

Table OrderItem {
  orderId string [pk, ref: > "Order".id]
  productId string [pk, ref: > Product.id]
  quantity int [not null]
  price float [not null]
}

Table Address {
  id string [pk]
  userId string [not null, ref: > User.id]
  name string [not null]
  street string [not null]
  city string [not null]
  state string [not null]
  country string [not null]
  phone string [not null]
  createdAt datetime [default: `now()`, not null]
}

Table Rating {
  id string [pk]
  rating int [not null]
  review string [not null]
  userId string [not null, ref: > User.id]
  productId string [not null, ref: > Product.id]
  orderId string [not null]
  createdAt datetime [default: `now()`, not null]
  updatedAt datetime [not null, note: 'updated automatically']
  
  Indexes {
    (userId, productId, orderId) [unique]
  }
}

Table VoucherCampaign {
  id string [pk]
  name string [not null]
  description string
  voucher_code string [unique]
  voucher_type VoucherType [not null]
  discount_type DiscountType [not null]
  discount_value float [not null]
  max_discount_amount float
  min_order_value float [default: 0, not null]
  start_date datetime [not null]
  end_date datetime [not null]
  total_usage_limit int [not null]
  user_usage_limit int [default: 1, not null]
  status string [default: 'ACTIVE', not null]
  created_by_shop_id string [ref: > Store.id]
  createdAt datetime [default: `now()`, not null]
  updatedAt datetime [not null, note: 'updated automatically']
}

Table UserVoucher {
  id string [pk]
  status UserVoucherStatus [default: 'AVAILABLE', not null]
  collected_date datetime [default: `now()`, not null]
  used_date datetime
  user_id string [not null, ref: > User.id]
  voucher_campaign_id string [not null, ref: > VoucherCampaign.id]
  used_in_order_id string [ref: > "Order".id]

  Indexes {
    (user_id, voucher_campaign_id, used_in_order_id) [unique]
  }
}

// --- Chat System ---

Table ChatSession {
  id string [pk]
  title string [not null]
  createdAt datetime [default: `now()`, not null]
  updatedAt datetime [not null, note: 'updated automatically']
  userId string [ref: > User.id]
}

Table ChatMessage {
  id string [pk]
  content string [not null]
  role string [not null]
  createdAt datetime [default: `now()`, not null]
  chatSessionId string [not null, ref: > ChatSession.id]
}

Table ChatLogs {
  id string [pk]
  sessionId string [not null, ref: > ChatSession.id]
  userQuery string [not null]
  detectedIntent string
  toolUsed string
  toolInput json
  toolOutput json
  finalResponse string [not null]
  responseTime int
  errorMessage string
  userId string
  createdAt datetime [default: `now()`, not null]
  
  Indexes {
    (sessionId)
    (createdAt)
  }
}

// --- NextAuth.js Tables ---

Table Account {
  id string [pk]
  userId string [not null, ref: > User.id]
  type string [not null]
  provider string [not null]
  providerAccountId string [not null]
  refresh_token Text
  access_token Text
  expires_at int
  token_type string
  scope string
  id_token Text
  session_state string

  Indexes {
    (provider, providerAccountId) [unique]
  }
}
